usunięcie niepotrzebnego wiązania

--- a/app/components/photo-album/photo-album.template.html
+++ b/app/components/photo-album/photo-album.template.html
@@ -25,4 +25,4 @@
     </div>
 </div>
 
-<photo-Album-Image ng-hide="$ctrl.ModalVisible"></photo-Album-Image>
+<photo-Album-Image></photo-Album-Image>
